# ubiquitous-classroom-controller

./: README.md  auth.js  docker-compose.kafka.yml  package.json
microservices/camera-service/: .env.example  README.md
microservices/camera-service/infra/: config.py  pyproject.toml
microservices/camera-service/src/: camera.py  kafka_producer.py  main.py
microservices/image-analysis-service/: .env.example  README.md
microservices/image-analysis-service/infra/: config.py  pyproject.toml
microservices/image-analysis-service/src/: detection_producer.py  image_consumer.py  main.py  professor_detector.py
microservices/scheduler-service/: .env.example  .gitignore  auth.js  data.json  index.js  kafka.js  package.json
microservices/scheduler-service/src/: main.js  producer.test.js
microservices/scheduler-service/src/application/: CalendarService.js
microservices/scheduler-service/src/application/presentation/: CalendarController.js
microservices/scheduler-service/src/application/processors/: CalendarEventProcessor.js
microservices/scheduler-service/src/domain/calendar/: CalendarEvent.entity.js
microservices/scheduler-service/src/infrastructure/database/: Storage.js
microservices/scheduler-service/src/infrastructure/google/: GoogleOAuthClient.js
microservices/scheduler-service/src/infrastructure/kafka/: CreateTopics.js  KafkaConsumer.js  KafkaProducer.js
microservices/scheduler-service/src/infrastructure/server/: expressServer.js
services/image-analysis-service/infra/: db_manager.py  pyproject.toml
