[tool.poetry]
name = "camera-service"
version = "0.1.0"
description = "A service to capture and send imagens from a camera device"
authors = ["Heithor <contato.hecthorur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.12.0.88"
kafka-python = "^2.2.15"
loguru = "^0.7.3"
pillow = "^11.3.0"
python-dotenv = "^1.1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
